# custom-projects

./: .coverage  .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-entrypoint.sh  fly.toml  main.py  parse_and_seed.py  parse_times_db.py  pyproject.toml  seed_baku.py
.github/workflows/: ci.yml  mobile.yml
core/: settings.py  urls.py
core/settings/: __init__.py  base.py  dev.py  prod.py
itinerary/: admin.py  models.py  permissions.py  querysets.py  ratelimits.py  urls.py  validators.py  views.py
itinerary/api/: serializers.py  urls.py  views.py
itinerary/dev_seed/: baku.py  html_seed.py
itinerary/migrations/: 0001_initial.py  0002_stopblock_end_time_of_day_and_more.py  0003_trip_user_required.py  0004_trip_creation_job.py  0005_trip_creation_attendees.py  0006_booking_email_import.py
itinerary/services/: __init__.py  attendees.py  booking_import.py  llm.py  mutations.py  pdf.py  places.py  reviews.py  trip_creation.py  weather.py
itinerary/tests/: test_api.py  test_booking_email_import.py  test_deploy.py  test_feature_completeness.py  test_generalization.py  test_llm.py  test_performance.py  test_permissions.py  test_security.py  test_settings_security.py  test_views.py
mobile/: README.md  RELEASE.md  pubspec.yaml
mobile/config/: dev.json  prod.json  staging.json
mobile/lib/: app.dart  main.dart
mobile/scripts/: build_android.sh  build_ios.sh
mobile/test/: env_test.dart  trip_models_test.dart  widget_test.dart
plan/: MASTER_PLAN.md  MOBILE_FLUTTER.md  PRODUCT_FEATURES.md  README.md  ROADMAP.md
templates/: base.html
(+61 files in other folders)
